@@ -38,6 +38,8 @@ version 1.3.1
   were read in "sideways" from, e.g., a CSV file
 - Fix bug in ADF p-values for locales which do not use '.' as
   the decimal point
+- Add BIC (Bayesian Information Criterion) to the list of model
+  statistics that can be retrieved via genr (internal variable $bic)
 
 11/15/2004 version 1.3.0
 - add "append" command, to append data to the current dataset,
